--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "constr": "Data Source=.;Initial Catalog=AssetManagement;user id=sa;password=sa2016;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=false",
+    "constr": "Data Source=.;Initial Catalog=AssetManagement;user id=sa;password=YourPassword;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=false",
     "ExcelConString": "Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'"
   }
    
